add nowe zasady wypelniania wnioskow 2019

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,27 @@
-	<div id="2019-szkolenie-int-sens">
+	<div id="2019-nowe-zasady">
+		<h1>Nowe Zasady wypełniania wniosków</h1>
+		<h5>28 grudnia 2018</h5>
+
+		<div class='comment more'>
+			<b>Dnia 28 grudnia 2018 roku</b> Prezes Stowarzyszenia "Bądźmy Razem" zorganizowała spotkanie dla
+			członków nt. m. in. nowych zasad wypełniania wniosków o środki ortopedyczne, jak cewniki,
+			pieluchomajtki... W/g nowych zasad, o czym nie wszyscy wiedzą osoby, w tym również lekarze,
+			którym "brakuje co miesiąc" pampersów powinny poprosić lekarza wypisującego wniosek aby
+			umieścił w uwagach na wniosku adnotację: <b>znaczny stopień niepełnosprawności i symbol 47 ZN, a w
+			ilości wielokrotności 90 szt. lub 100 - 180 szt., lub 190 - 270 szt. itd. na miesiąc lub te wielkości
+			pomnożyć przez 2 (wtedy na 2 miesiące) lub przez 3 (wtedy na kwartał)</b>. Jest to dla nas bardzo
+			korzystne finansowo, gdyż przy 60 - 90 szt. jest jeden limit, a już przy 180 szt. są dwa limity i wtedy
+			mniej dopłacamy z własnej kieszeni. O dofinansowanie z PCP - u na środki ortopedyczne można się
+			starać jeżeli dochód netto na 1 osobę nie przekracza 2290,10 zł. Kwota aktualna jest do końca lutego.
+			Z Aktywnego Samorządu można również starać się <b>o dofinansowanie do naprawy wózka
+			inwalidzkiego</b> w miarę dostępnych środków. <b>Zniesiono przepis, który mówił o tym, że o nowy
+			wózek można było się starać 1 raz na 5 lat. Tego przepisu już nie ma. Zniesiono również rejonizację
+			punktów rejestracji wniosków o środki ortopedyczne.</b>
+			<br/>
+		</div>
+	</div>
+
+    <div id="2019-szkolenie-int-sens">
 		<h1>Szkolenie</h1>
 		<h5>18 grudnia 2018</h5>
 
