add jeden procent 2019

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,20 @@
+	<div id="2019-jeden-procent">
+		<h1>Prośba o <img width=27px height=17px src="style/images/jeden-procent.png" /> podatku za 2018 !</h1>
+		<h5>23 stycznia 2019</h5>
+
+		<div class='comment more'>
+			Jak co roku nasi niepełnosprawni członkowie proszą o odpisanie podatku z PIT-u 1% za rok 2018
+			ze wskazaniem konkretnej osoby, wtedy pieniążki po odliczeniu 10 % na cele statutowe
+			Stowarzyszenia "Bądźmy Razem" pójdą do wskazanej osoby lub nie wskazując konkretnej osoby,
+			wtedy pieniążki zasilą konto całego Stowarzyszenia "Bądźmy Razem". Dla przypomnienia podaję <b>KRS</b>
+			naszego Stowarzyszenia: <b>0000414760</b>. Z góry serdecznie dziękujemy i zapewniamy, że spożytkujemy
+			je na konkretne cele statutowe.<br/><br/>
+			Maciejek Małgorzata<br/><br/>
+			Prezes Stowarzyszenia "Bądźmy Razem"
+			<br/>
+		</div>
+	</div>
+
 	<div id="2019-nowe-zasady">
 		<h1>Nowe Zasady wypełniania wniosków</h1>
 		<h5>28 grudnia 2018</h5>
