--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div id="2019-nowe-zasady">
-		<h1>Nowe Zasady wypełniania wniosków</h1>
+		<h1>Nowe zasady wypełniania wniosków</h1>
 		<h5>28 grudnia 2018</h5>
 
 		<div class='comment more'>
