--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,17 @@
+	<div id="2019-bal-karnawalowy">
+		<h1>Bal Karnawałowy</h1>
+		<h5>21 luty 2019</h5>
+
+		<div class='comment more'>
+			21 lutego 2019 roku byliśmy jak co roku zaproszeni na Bal Karnawałowy dla osób niepełnosprawnych,
+			który miał miejsce na Zamku Królewskim w Niepołomicach.
+			Organizatorem balu był Burmistrz Miasta i Gminy Niepołomice, p. Roman Ptak.
+			Nasi uczestnicy bawili się wspaniale czego dowodem są zdjęcia umieszczone w <a href="galeria_2019.bal-karnawalowy.html">Galerii</a>.
+			Bal osobiście "otworzył" p. Burmistrz, a poczęstunek serwowała nam restauracja Zamek.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2019-jeden-procent">
 		<h1>Prośba o <img width=27px height=17px src="style/images/jeden-procent.png" /> podatku za 2018 !</h1>
 		<h5>23 stycznia 2019</h5>
