--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,11 +1,32 @@
 <div class="centertable">
     <table><tr><td>
 
+            <h1>Podsumowanie 2018 r.</h1>
+
+            <a href="docs/2018/sprawozdanie merytoryczne.jpg">Sprawozdanie merytoryczne</a>
+            <br/>
+            <a href="docs/2018/sprawozd Komisji Rewizyjnej.jpg">Sprawozdanie komisji rewizyjnej</a>
+            <br/>
+            <a href="docs/2018/Bilans.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2018/RZiS.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2018/zakres inf wykazywanych w sprawozdaniu finansowym.jpg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2018/zakres inf wykazywanych w sprawozdaniu finansowym2.jpg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2018/Informacje dodatkowe do bilansu1.jpg">Informacje uzupełniające</a>
+            <br/>
+            <a href="docs/2018/Informacje dodatkowe do bilansu 2.jpg">Informacje uzupełniające (strona 2)</a>
+            <br/>
+            <br/>
+
+
             <h1>Podsumowanie 2017 r.</h1>
 
             <a href="docs/2017/sprawozdanie merytoryczne 2017.jpeg">Sprawozdanie merytoryczne</a>
             <br/>
-            <a href="docs/2017/sprawozdanie komisji rewizyjnej 2017.jpeg">Sprawozdanie komicji rewizyjnej</a>
+            <a href="docs/2017/sprawozdanie komisji rewizyjnej 2017.jpeg">Sprawozdanie komisji rewizyjnej</a>
             <br/>
             <a href="docs/2017/bilans 2017.jpeg">Bilans</a>
             <br/>
