Badanie i ocena stanu dziecka w/g zasad rehabilitacji neurorozwojowej - 2019

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,17 @@
+	<div id="2019-szkolenie-badanie-i-ocena-stanu-dziecka">
+		<h1>Badanie i ocena stanu dziecka w/g zasad rehabilitacji neurorozwojowej</h1>
+		<h5>8 kwiecień 2019</h5>
+
+		<div class='comment more'>
+			8 kwietnia 2019 roku w siedzibie Stowarzyszenia "Bądźmy Razem" odbyło się szkolenie dla naszych członków
+			nt: "Badanie i ocena stanu dziecka w/g zasad rehabilitacji neurorozwojowej".
+			Szkolenie prowadziła mgr Agnieszka Bochenek, oligofrenopedagogik i pedagog w Szkole Specjalnej
+			w Wieliczce. Polecamy ponieważ szkolenie było bardzo ciekawe i pouczające.
+			Gdyby ktoś z Państwa był zainteresowany proszę przeczytać
+			<a href="docs/2019/Badanie i ocena stanu dziecka wedlug zasad rehabilitacji neurorozwojowej.docx">artykuł</a> na ten temat.<br/>
+		</div>
+	</div>
+
 	<div id="2019-bal-karnawalowy">
 		<h1>Bal Karnawałowy</h1>
 		<h5>21 luty 2019</h5>
