--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,15 @@
+
+	<div id="2019-walne">
+		<h1>Walne Zebranie</h1>
+		<h5>25 kwiecień 2019</h5>
+
+		<div class='comment more'>
+			25 kwietnia 2019 roku podsumowaliśmy szósty rok naszej działalności na Walnym Zebraniu.
+			Zarząd uzyskał absolutorium. Sprawozdania z działalności Komisji Rewizyjnej, z działalności
+			Zarządu oraz sprawozdanie finansowe znajdują się na stronie Stowarzyszenia w zakładce <a href="sprawozdania.html">Sprawozdania</a>.
+		</div>
+	</div>
+
 	<div id="2019-szkolenie-badanie-i-ocena-stanu-dziecka">
 		<h1>Badanie i ocena stanu dziecka w/g zasad rehabilitacji neurorozwojowej</h1>
 		<h5>8 kwiecień 2019</h5>
