--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,24 @@
 
+	<div id="2019-jaworze">
+		<h1>Turnus w Jaworze</h1>
+		<h5>7 - 20 lipiec 2019</h5>
+
+		<div class='comment more'>
+			W dniach 7 - 20 lipca 2019 roku wyjechaliśmy z naszymi podopiecznymi na turnus
+			rehabilitacyjny do Jaworza koło Bielsko Biała do Villi Barbara. Villa Barbara mieści się
+			w na obrzeżach pięknego Parku w którym znajduje się Solankowa Tężnia, wokół której
+			spacerowaliśmy wdychając zdrowe powietrze tak bardzo potrzebne nam wszystkim. Na terenie
+			na którym jest Villa stoi "grillowania" oraz przepiękna podświetlana fontanna.<br/><br/>
+			Codziennie pływaliśmy w basenie mieszczącym się w budynku. Korzystaliśmy z zabiegów m. in.
+			okładów borowinowych, hydromasażu, lampy solux, Bioptronu, krioterapii, masaży
+			oraz ćwiczeń grupowych w basenie i na sali gimnastycznej. Zwiedziliśmy też okolice Jaworza.
+			Byliśmy w Szczyrku, Wiśle oraz Ustroniu. Wyjechaliśmy również kolejką linową na Szyndzielnię
+			oraz kolejką szynową na górę z której rozchodziły się piękne widoki na Jezioro Żywieckie.
+			Podziwialiśmy panoramę Żywca oraz starty paralotniarzy. <br/><br/>Pobyt na turnusie był bardzo udany.
+			Zdjęcia wkrótce w naszej galerii.
+		</div>
+	</div>
+
 	<div id="2019-walne">
 		<h1>Walne Zebranie</h1>
 		<h5>25 kwiecień 2019</h5>
