poprawka do artykulu

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -14,7 +14,13 @@
 			oraz ćwiczeń grupowych w basenie i na sali gimnastycznej. Zwiedziliśmy też okolice Jaworza.
 			Byliśmy w Szczyrku, Wiśle oraz Ustroniu. Wyjechaliśmy również kolejką linową na Szyndzielnię
 			oraz kolejką szynową na górę z której rozchodziły się piękne widoki na Jezioro Żywieckie.
-			Podziwialiśmy panoramę Żywca oraz starty paralotniarzy. <br/><br/>Pobyt na turnusie był bardzo udany.
+			Podziwialiśmy panoramę Żywca oraz starty paralotniarzy.
+			<br/><br/>
+			Pobyt na turnusie był bardzo udany.
+			<br/><br/>
+			Członkowie z orzeczeniem o niepełnosprawności dostali dofinansowanie w wysokości 7 tysięcy złotych
+			od Burmistrza Miasta i Gminy Niepołomice.
+			<br/><br/>
 			Zdjęcia wkrótce w naszej galerii.
 		</div>
 	</div>
