--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -21,7 +21,7 @@
 			Członkowie z orzeczeniem o niepełnosprawności dostali dofinansowanie w wysokości 7 tysięcy złotych
 			od Burmistrza Miasta i Gminy Niepołomice.
 			<br/><br/>
-			Zdjęcia wkrótce w naszej galerii.
+			Zdjęcia z turnusu znajdują się w <a href="galeria_2019.jaworze.html">galerii</a>.
 		</div>
 	</div>
 
