--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,16 @@
 
+	<div id="2019-mikolajki">
+		<h1>Spotkanie Mikołajkowe</h1>
+		<h5>7 grudzień 2019</h5>
+
+		<div class='comment more'>
+			W dniu 7 grudnia 2019 roku członkowie Stowarzyszenia "Bądźmy Razem" jak co roku zebrali się w
+			Laboratorium Aktywności Społecznej na spotkaniu Mikołajkowym. Każdy członek niepełnosprawny
+			otrzymał paczkę o wartości 200 zł ufundowaną w całości przez Stowarzyszenie. Było wesoło i przyjemnie
+			jak zawsze kiedy się spotykamy.
+		</div>
+	</div>
+
 	<div id="2019-jaworze">
 		<h1>Turnus w Jaworze</h1>
 		<h5>7 - 20 lipiec 2019</h5>
