2020 bal na zamku - text

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,19 @@
 
+	<div id="2020-bal-na-zamku">
+		<h1>Bal na zamku</h1>
+		<h5>18 lutego 2020</h5>
+
+		<div class='comment more'>
+			18 lutego 2020 roku bawiliśmy się jak co roku na Balu dla niepełnosprawnych w komnatach
+			Zamku Królewskiego w Niepołomicach. Bal organizowany jest przez Burmistrza Miasta i Gminy Niepołomice
+			p. Romana Ptaka. Ale w tym roku otwierał go komisarz zastępujący Burmistrza p. Krystian Zieliński.
+			Ponieważ 20 luty był "tłustym czwartkiem" więc poczęstowano nas pączkami i faworkami.
+			Oprócz tego serwowany był obiad z deserem przygotowany przez restaurację Zamek.
+			Frekwencja dopisała do tego stopnia, że brakowało miejsc siedzących. Ale wszyscy świetnie się
+			bawili, jak co roku z zespołem muzycznym. Czekamy już na powtórkę w 2021 roku.
+		</div>
+	</div>
+
 	<div id="2019-mikolajki">
 		<h1>Spotkanie Mikołajkowe</h1>
 		<h5>7 grudzień 2019</h5>
