2020 bal na zamku - pics

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -11,6 +11,8 @@
 			Oprócz tego serwowany był obiad z deserem przygotowany przez restaurację Zamek.
 			Frekwencja dopisała do tego stopnia, że brakowało miejsc siedzących. Ale wszyscy świetnie się
 			bawili, jak co roku z zespołem muzycznym. Czekamy już na powtórkę w 2021 roku.
+			<br/>
+			Zdjęcia z balu znajdują się w <a href="galeria_2020.bal.html">galerii</a>.
 		</div>
 	</div>
 
