2020 ustka + zebranie walne

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,41 @@
 
+	<div id="2020-walne">
+		<h1>Zebranie Walne</h1>
+		<h5>12 września 2020</h5>
+
+		<div class='comment more'>
+			Zebranie Walne odbędzie się 12 września 2020 roku w siedzibie Stowarzyszenia. Proszę o
+			przygotowanie sprawozdań za rok 2019. Na Zebraniu również odbędą się wybory do nowych władz
+			Stowarzyszenia. <b>Obecność bezwzględnie obowiązkowa.</b>
+		</div>
+	</div>
+
+	<div id="2020-ustka">
+		<h1>Turnus rehabilitacyjny w Ustce</h1>
+		<h5>sierpień 2020</h5>
+
+		<div class='comment more'>
+			No cóż wakacje się skończyły ale można je powspominać. W tym roku członkowie
+			stowarzyszenia Bądźmy Razem podobnie jak w ubiegłych latach wyjechali tym razem nad morze do
+			Ustki do ośrodka Pomorze. Przez całe dwa tygodnie mieliśmy przepiękną pogodę -średnia
+			temperatura powietrza - 28-30°C, a temperatura wody -18-20°c i ani kropli deszczu. Więc
+			zażywaliśmy kąpieli w morzu i plażowaliśmy jak nigdy. Ale, no właśnie ale-zejścia dla
+			niepełnosprawnych do morza, a właściwie jedno bo pozostałe albo schody albo zasypane piaskiem.
+			Więc zjechać wózkiem to było niemożliwe. Jedno przy samym porcie byłoby ok gdyby drewniany
+			chodnik był podsypany piaskiem na sztywno. Mimo naszych interwencji w Urzędzie Miasta Ustki oraz
+			OSiR-e nic się przez dwa tygodnie nie zmieniło. Na fb są zdjęcia tego zejścia. Ośrodek Pomorze
+			powiedzmy był ok na średnim poziomie, natomiast jedzenie przepyszne. Każdy uczestnik miał dwa
+			zabiegi indywidualne i jeden grupowy dziennie. A więc: jonoforeza , TENS, magnetronik, solux,
+			hydromasaż i łóżko wodne, coś fantastycznego. Grupowa gimnastyka, spacery z kijkami odbywały się
+			na świeżym powietrzu. Prawie codziennie odbywały sie 'potańcówki' przed budynkiem oraz dwa
+			koncerty. Ale pomimo wysokiej ceny za skierowanie ośrodek nie zorganizował żadnej 'wyjazdowej'
+			wycieczki tylko na miejscu, np. do Muzeum Bursztynu czy wycieczkę do bunkrów oraz grill w ostatni
+			dzień z 'kawałkiem kiełbaski z chlebem i musztardą'. To tyle. Reasumując nie polecamy.
+			<br/>
+			Zdjęcia z balu znajdują się w <a href="galeria_2020.morze.html">galerii</a>.
+		</div>
+	</div>
+
 	<div id="2020-bal-na-zamku">
 		<h1>Bal na zamku</h1>
 		<h5>18 lutego 2020</h5>
