2020 ustka + zebranie walne - typo

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -32,7 +32,7 @@
 			wycieczki tylko na miejscu, np. do Muzeum Bursztynu czy wycieczkę do bunkrów oraz grill w ostatni
 			dzień z 'kawałkiem kiełbaski z chlebem i musztardą'. To tyle. Reasumując nie polecamy.
 			<br/>
-			Zdjęcia z balu znajdują się w <a href="galeria_2020.morze.html">galerii</a>.
+			Zdjęcia z pobytu znajdują się w <a href="galeria_2020.morze.html">galerii</a>.
 		</div>
 	</div>
 
