--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,6 +1,22 @@
 <div class="centertable">
     <table><tr><td>
 
+            <h1>Podsumowanie 2019 r.</h1>
+
+            <a href="docs/2019/bilans.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2019/rachunek zyskow i strat.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2019/zakres informacji - strona 1.jpg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2019/zakres informacji - strona 2.jpg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2019/informacje dodatkowe - strona 1.jpg">Informacje uzupełniające</a>
+            <br/>
+            <a href="docs/2019/informacje dodatkowe - strona 2.jpg">Informacje uzupełniające (strona 2)</a>
+            <br/>
+            <br/>
+
             <h1>Podsumowanie 2018 r.</h1>
 
             <a href="docs/2018/sprawozdanie merytoryczne.jpg">Sprawozdanie merytoryczne</a>
