--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,18 @@
 
+	<div id="2021-cwiczenia">
+		<h1>Ćwiczenia stymulujące zmysł dotyku</h1>
+		<h5>10 listopada 2020</h5>
+		<div class='comment more'>
+
+			W dniu 10 listopada 2020 roku p. Agniszka Bochenek - logopeda, terapeutka i nauczyciel Szkoły Specjalnej
+			w Wieliczce przeprowadziła dla członków Stowarzyszenia "Bądźmy Razem" szkolenie nt. Ćwiczenia stymulujące
+			zmysł dotyku".
+			<br/>Szkolenie przeprowadzono zdalnie. Materiały ze szkolenia znajdują się w :
+			<br/><a href="docs/2021/Cwiczenia stymulujace zmysl dotyku.pdf">Ćwiczenia stymulujące zmysł dotyku</a>
+			<br/><a href="docs/2021/Cwiczenia stymulujace uklad przedsionkowy.pdf">Ćwiczenia stymulujące układ przedsionkowy</a>
+			<br/>
+		</div>
+	</div>
 	<div id="2020-walne">
 		<h1>Zebranie Walne</h1>
 		<h5>12 września 2020</h5>
