2021 cwiczenia + mała zmiana textu

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -5,8 +5,8 @@
 		<div class='comment more'>
 
 			W dniu 10 listopada 2020 roku p. Agniszka Bochenek - logopeda, terapeutka i nauczyciel Szkoły Specjalnej
-			w Wieliczce przeprowadziła dla członków Stowarzyszenia "Bądźmy Razem" szkolenie nt. Ćwiczenia stymulujące
-			zmysł dotyku".
+			w Wieliczce przeprowadziła dla członków Stowarzyszenia "Bądźmy Razem" szkolenie
+			nt. "Ćwiczenia stymulujące zmysł dotyku".
 			<br/>Szkolenie przeprowadzono zdalnie. Materiały ze szkolenia znajdują się w :
 			<br/><a href="docs/2021/Cwiczenia stymulujace zmysl dotyku.pdf">Ćwiczenia stymulujące zmysł dotyku</a>
 			<br/><a href="docs/2021/Cwiczenia stymulujace uklad przedsionkowy.pdf">Ćwiczenia stymulujące układ przedsionkowy</a>
