--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,8 +1,28 @@
 <div class="centertable">
-    <table><tr><td>
+        <table><tr><td>
+
+            <h1>Podsumowanie 2020 r.</h1>
+
+            <a href="docs/2020/spr. merytoryczne 2020.pdf">Sprawozdanie merytoryczne</a>
+            <br/>
+            <a href="docs/2020/bilans 2020.pdf">Bilans</a>
+            <br/>
+            <a href="docs/2020/rachunek_zyskow_i strat_2020.pdf">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2020/inf wykazywane w zakresie spr 2020.pdf">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2020/cd. inf.2020.pdf">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2020/inf. dodatkowe 2020.pdf">Informacje uzupełniające</a>
+            <br/>
+            <a href="docs/2020/cd. inf. dodatkowych 2020.pdf">Informacje uzupełniające (strona 2)</a>
+            <br/>
+            <br/>
 
             <h1>Podsumowanie 2019 r.</h1>
 
+            <a href="docs/2019/merytoryczne za 2019.pdf">Sprawozdanie merytoryczne</a>
+            <br/>
             <a href="docs/2019/bilans.jpg">Bilans</a>
             <br/>
             <a href="docs/2019/rachunek zyskow i strat.jpg">Rachunek zysków i strat</a>
