2021 dabki - add new article

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,25 @@
 
+
+	<div id="2021-dabki">
+		<h1>Turnus w Dąbkach</h1>
+		<h5>7 sierpnia 2021</h5>
+		<div class='comment more'>
+			Dnia 7 sierpnia 2021 roku wyjechaliśmy jak co roku z naszymi członkami na turnus rehabilitacyjny do Dąbek nad morzem.
+			Mieszkaliśmy w ośrodku ARGENTYT. Jest to nowy ośrodek na 600 osób położony między ogromnym jeziorem Bukowo, które połączone jest z morzem kanałem Szczyckim, a morzem.
+			<br/>Na przystani żeglarskiej była wypożyczalnia rowerów wodnych i kajaków oraz można było zafundować sobie rejs statkiem po jeziorze, z czego oczywiście skorzystaliśmy.
+			Wokół był piękny park więc było gdzie spacerować. No niestety najbliższe zejście do morza dla wózków oddalone było od ośrodka o 1,5 km !!! o czym nas nie poinformowano.
+			<br/>Ośrodek piękny, nowy, w pełni przystosowany dla niepełnosprawnych z basenem i bardzo rozbudowaną bazą zabiegową.
+			Ale na basenie brak przebieralni dla niepełnosprawnych, a obsługa recepcji, ośrodka i pielęgniarki niemiła, nieprzystępn, lekarze niekiedy przepisywali zabiegi,
+			których nie można było wykonać danej osobie albo z braku wskazań do danego schorzenia albo z powodów "fizycznych".
+			<br/>Na stołówce podzieleni byliśmy na kuracjuszy z NFZ-tu i tzw. "śmietankę" ( pełnopłatnych), aczkolwiek jedzenie pyszne, różnorakie, kelnerki bardzo miłe.
+			Pogoda była pół na pół, tydzień ciepły, słoneczny, a tydzień ze sztormami na morzu i deszczami. A na koniec najfajniejsze było to, że RĘCZNIKI, leżaki i falochrony były za kaucją!!!
+			A do kawiarni aby posiedzieć trzeba było zapłacić wstępne 10 zł !. I co z tego że ośrodek zafundował nam ognisko, ale do placu gdzie było nie można było dojechać wózkiem.
+			<br/>Reasumując lepsze były niekiedy wyjazdy w poprzednich latach, a ten był po prostu nieudany. I aby się zrelaksować zafundowaliśmy sobie pełen etrakcji pogodowych rejs po morzu statkiem Pirat.
+			Zdjęcia jak zwykle w <a href="galeria_2021.dabki.html">galerii</a>.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2021-cwiczenia">
 		<h1>Ćwiczenia stymulujące zmysł dotyku</h1>
 		<h5>10 listopada 2020</h5>
