--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,6 +1,22 @@
 <div class="centertable">
         <table><tr><td>
 
+            <h1>Podsumowanie 2021 r.</h1>
+
+            <a href="docs/2021/bilans21.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2021/rachunek21.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2021/info21_1.jpg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2021/info21_2.jpg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2021/infodod21_1.jpg">Informacje uzupełniające</a>
+            <br/>
+            <a href="docs/2021/infodod21_2.jpg">Informacje uzupełniające (strona 2)</a>
+            <br/>
+            <br/>
+
             <h1>Podsumowanie 2020 r.</h1>
 
             <a href="docs/2020/spr. merytoryczne 2020.pdf">Sprawozdanie merytoryczne</a>
