--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,5 +1,41 @@
 
 
+	<div id="2022-walne">
+		<h1>Zebranie Walne</h1>
+		<h5>wrzesień 2022</h5>
+		<div class='comment more'>
+			Zebranie Walne odbędzie się 12 września 2020 roku w siedzibie Stowarzyszenia. Proszę o
+			przygotowanie sprawozdań za rok 2019. Na Zebraniu również odbędą się wybory do nowych władz
+			Stowarzyszenia. Obecność bezwzględnie obowiązkowa.
+			<br/>
+		</div>
+	</div>
+
+	<div id="2022-ustronie">
+		<h1>Ustronie Morskie</h1>
+		<h5>lipiec 2022</h5>
+		<div class='comment more'>
+			No cóż wakacje się skończyły ale można je powspominać i przejść do 'rzeczywistości obecnej'.
+			W tym roku członkowie stowarzyszenia Bądźmy Razem podobnie jak w ubiegłych latach wyjechali
+			nad morze do Ustronia Morskiego do ośrodka Leśna Polana. Ośrodek położony na obrzeżach
+			Ustronia, ok. 1 km od zejścia na plażę dla wózkowiczów oraz ok. 2 km od Busoli i mola.. Przez całe
+			dwa tygodnie mieliśmy przepiękną pogodę, praktycznie tylko z jednym dniem deszczowym.. Więc
+			zażywaliśmy kąpieli w morzu i plażowaliśmy jak w ubiegłym roku. No i może to była przyczyna, że nie
+			pojechaliśmy na żadną wycieczkę i nie skorzystaliśmy z karnetów na basen. Sam ośrodek to budynek
+			jeszcze po PRL-owski, częściowo wyremontowany. Ale posiłki smaczne, obsługa miła. Każdy uczestnik
+			miał trzy zabiegi darmowe indywidualne i jeden grupowy dziennie, ale mógł też dodatkowo
+			korzystać z zabiegów komercyjnych. A więc: jonoforeza, TENS, magnetronik, solux, hydromasaż, okłady borowinowe, krioterapia.
+			Była również grota solna, gdzie przez pół godziny wdychaliśmy sól,
+			jód... Grupowa gimnastyka odbywała się na świeżym powietrzu. Na początku i na końcu pobytu
+			ośrodek zorganizował kolacje na świeżym powietrzu wraz z potańcówką. Były pieczone skrzydełka,
+			kiełbaski, kaszanka, ziemniaczki oraz napoje. kolacje te odbywały się w ogrodach ośrodka. Podobnie
+			zorganizowali nam 'dancingi' w kawiarni na terenie Ośrodka, a jeden pod hasłem 'lata 20, lata 30'.
+			W parku w amfiteatrze odbywały się koncerty, występował m.in. Zenek Martyniuk, zespół Boys. Dwa tygodnie minęły szybko, ale wesoło.
+			Zdjęcia z pobytu znajdują się w <a href="galeria_2022.ustronie.html">galerii</a>.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2021-dabki">
 		<h1>Turnus w Dąbkach</h1>
 		<h5>7 sierpnia 2021</h5>
