--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -2,7 +2,8 @@
         <table><tr><td>
 
             <h1>Podsumowanie 2021 r.</h1>
-
+            <a href="docs/2021/sprawozdanie_merytorycznie_2021.pdf">Sprawozdanie merytoryczne</a>
+            <br/>
             <a href="docs/2021/bilans21.jpg">Bilans</a>
             <br/>
             <a href="docs/2021/rachunek21.jpg">Rachunek zysków i strat</a>
