--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,6 +1,25 @@
 <div class="centertable">
         <table><tr><td>
 
+            <h1>Podsumowanie 2022 r.</h1>
+            <a href="docs/2022/sprawozdanie.jpg">Sprawozdanie merytoryczne</a>
+            <br/>
+            <a href="docs/2022/bilans.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2022/rachunek.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2022/zakres_info.jpg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2022/zakres_info2.jpg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2022/info_do_bilansu.jpg">Informacje dodatkowe</a>
+            <br/>
+            <a href="docs/2022/info_do_bilansu2.jpg">Informacje dodatkowe (strona 2)</a>
+            <br/>
+            <a href="docs/2022/protokol.jpg">Protokół stanu kasy</a>
+            <br/>
+            <br/>
+
             <h1>Podsumowanie 2021 r.</h1>
             <a href="docs/2021/sprawozdanie_merytorycznie_2021.pdf">Sprawozdanie merytoryczne</a>
             <br/>
