--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,21 @@
 
+    <div id="2023-miedzywodzie">
+        <h1>Międzywodzie</h1>
+        <h5>sierpień 2023</h5>
+        <div class='comment more'>
+            W tym roku, podobnie jak w ubiegłych latach wyjechaliśmy z naszymi podopiecznymi na dwutygodniowy turnus rehabilitacyjny nad morze do Międzywodzia do ośrodka GWAREK.
+            Ośrodek położony jest ok 1 km od pięknego zejścia na plażę, praktycznie w centrum Międzywodzia.
+            Wszyscy mieliśmy po trzy zabiegi dziennie, min. matę masującą, fotel masujący, laser, okłady borowinowe, krioterapię, lampę solux oraz TENS i diadynamik.
+            Niestety brakowało hydromasażu, chociaż był w ofercie. Ośrodek zorganizował nam dwa wieczorki taneczne oraz dwa grille.
+            Sami natomiast zorganizowaliśmy sobie wycieczkę do Świnoujścia na której to mieliśmy popływać statkiem po Bałtyku.
+            Niestety ze względu na stan alarmowy związany z wojną na Ukrainie rejs odwołano.
+            Ale oglądneliśmy obiekt historyczny Stawa Młyny znajdującego się na końcu Falochronu, mającego 10 m wysokości oraz przejechaliśmy nowo wybudowanym tunelem pod rzeką Świną.
+            Byliśmy również nad Zalewem Kamieńskim i w Parku Miniatur i Kolejek w Dziwnowie.
+            Pomimo tego że praktycznie lało przez dwa tygodnie, z małymi przerwami dopisywały nam humory i miło spędziliśmy czas.
+            Zdjęcia z wyjazdu znajdują się w naszej <a href="galeria_2023.miedzywodzie.html">galerii</a>..
+            <br/>
+        </div>
+    </div>
 
 	<div id="2022-walne">
 		<h1>Zebranie Walne</h1>
