--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,6 +1,26 @@
 <div class="centertable">
         <table><tr><td>
 
+            <h1>Podsumowanie 2023 r.</h1>
+            <a href="docs/2023/bilans.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2023/rachunek.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2023/zakres1.jpg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2023/zakres2.jpg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2023/info1.jpg">Informacje dodatkowe</a>
+            <br/>
+            <a href="docs/2023/info2.jpg">Informacje dodatkowe (strona 2)</a>
+            <br/>
+            <a href="docs/2023/info3.jpg">Informacje dodatkowe (strona 3)</a>
+            <br/>
+            <a href="docs/2023/protokol.jpg">Protokół stanu kasy</a>
+            <br/>
+            <br/>
+
+
             <h1>Podsumowanie 2022 r.</h1>
             <a href="docs/2022/sprawozdanie.jpg">Sprawozdanie merytoryczne</a>
             <br/>
