--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -2,6 +2,8 @@
         <table><tr><td>
 
             <h1>Podsumowanie 2023 r.</h1>
+            <a href="docs/2023/sprawozdanie.jpg">Sprawozdanie merytoryczcne</a>
+            <br/>
             <a href="docs/2023/bilans.jpg">Bilans</a>
             <br/>
             <a href="docs/2023/rachunek.jpg">Rachunek zysków i strat</a>
