dokumenty za rok 2024

--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,6 +1,27 @@
 <div class="centertable">
         <table><tr><td>
 
+        <h1>Podsumowanie 2024 r.</h1>
+            <a href="docs/2024/sprawozdanie.jpg">Sprawozdanie merytoryczcne</a>
+            <br/>
+            <a href="docs/2024/bilans.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2024/rachunek.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2024/zakres.jpg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2024/zakres2.jpg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2024/informacje_dodatkowe.jpg">Informacje dodatkowe</a>
+            <br/>
+            <a href="docs/2024/informacje_dodatkowe2.jpg">Informacje dodatkowe (strona 2)</a>
+            <br/>
+            <a href="docs/2024/informacje_dodatkowe3.jpg">Informacje dodatkowe (strona 3)</a>
+            <br/>
+            <a href="docs/2024/protokol.jpg">Protokół stanu kasy</a>
+            <br/>
+            <br/>
+
             <h1>Podsumowanie 2023 r.</h1>
             <a href="docs/2023/sprawozdanie.jpg">Sprawozdanie merytoryczcne</a>
             <br/>
